# examples

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  all-icons.txt  build.py  control_plane.bicep  deploy.py  dummy_sensor_data.db  generate-locations.sh  icon-output.py  index.ipynb  introduction.ipynb  locations.yaml  pyproject.toml  pytest.ini  support_nodes.bicep  test_config.yaml
case-studies/DuckDB-Logs-Processing/job-container/: Dockerfile  build.yaml  json_wrapper.py  process.py  pyproject.toml  requirements.txt
case-studies/motherduck-bacalhau-integration/jobcontainer/: Dockerfile  process.py  pyproject.toml  requirements.txt
data-engineering/csv-to-avro-or-parquet/csv-to-avro-parquet/: README.md  pyproject.toml
data-engineering/databricks-with-bacalhau/: .env.example  .gitignore  .latest-registry-image  AGENTS.md  AUTOLOADER_SETUP.md  CLAUDE.md  CLEANUP_RULES.md  CLEANUP_SUMMARY.md  DEMO_FLOW.md  DEPLOYMENT.md  DEVELOPMENT_RULES.md  Dockerfile  ENVIRONMENT_SETUP.md  FEATURE_databricks_pipeline_rearch.md  IMPLEMENTATION_SUMMARY.md  MANUAL_EXECUTION_GUIDE.md  MASTER_SETUP_AND_DEMO.md  NEXT_STEPS.md  QUICK_START.md  QUICK_START_CHECKLIST.md  README.md  REARCHITECTURE.md  SETUP_COMPLETE.md  SPEC_VERSIONING.md  additional-commands.sh.template  bucket-config.env  build.sh  cleanup-tables.py  cleanup-unity-catalog.py  current-policy.json  databricks-s3-uploader-config-local.yaml  databricks-setup.py  debug-databricks.py  deploy.sh  diagnose-databricks.py  docker-run-helper.sh  fix-databricks-config.py  generate-additional-commands.py  generate-and-deploy.sh  pipeline_config.db  (+34 more)
data-engineering/databricks-with-bacalhau/.claude/: settings.local.json
data-engineering/databricks-with-bacalhau/.cspell/: custom-dictionary.txt
data-engineering/databricks-with-bacalhau/.githooks/: README.md  pre-commit  pre-commit-databricks
data-engineering/databricks-with-bacalhau/config/: cities.txt  cosmos-config.yaml.example
data-engineering/databricks-with-bacalhau/cosmos-uploader/: CLEANUP.md  README.md  REFACTORING.md  cosmos-config.yaml.example  entrypoint.sh
data-engineering/databricks-with-bacalhau/databricks-notebooks/: .ruff.toml  01-setup-autoloader-demo.py  02-teardown-all.py  03-scheduled-autoloader-processor.py  README.md  flexible-autoloader.py  setup-and-run-autoloader.py  simple-autoloader-polling.py  test-autoloader-access.py
data-engineering/databricks-with-bacalhau/databricks-uploader/: .env.example  .gitignore  Dockerfile  PIPELINE_MIGRATION_GUIDE.md  README.md  api_backend.py  autoloader_main.py  cleanup-final.sh  config.example.yaml  config_db.py  databricks-s3-uploader-config-local.yaml  databricks-uploader-config-s3.yaml.example  databricks-uploader-config.yaml  databricks-uploader-config.yaml.example  example-dynamic-config.yaml  gps_demo_test.db  json_log_processor.py  log_monitor.py  monitor_pipeline.py  pipeline_logging.py  pipeline_manager.py  pipeline_orchestrator.py  retry_handler.py  retry_manager.py  sensor_data_models.py  sensor_data_schema.json  simple_test.py  spec_version_manager.py  sqlite_to_databricks_uploader.py  sqlite_to_delta_uploader.py  sqlite_to_json_transformer.py  test_config_parser.py  test_config_with_enable_flags.yaml  test_config_without_processing_mode.yaml  test_direct_insert.py  test_migration.py  (+7 more)
distributed-datawarehouse/: .gitignore  README.md  config.yaml.sample  pyproject.toml
distributed-datawarehouse/ddw/: __init__.py
distributed-datawarehouse/ddw-client/: config.yaml.sample  index.ipynb
distributed-datawarehouse/duckdb/: README.md
distributed-datawarehouse/setup/: docker-compose.yml
multi-sqlite/: README.md  display_vm_details.sh  get_all_ips_and_regions.py  job.yaml  job_multizone.yaml  pyproject.toml
multi-sqlite/jobcontainer/: query.py
multi-sqlite/tf/: .env.example  main.tf  output.tf  variable.tf
mycelial-llm-demo/demo-client/: .gitignore  README.md  config.sample.yaml  pyproject.toml
scale-tester/aws_spot/: .gitignore  README.md  build-ami.sh  env_writer.yaml  plan.md  pusher-job.yaml  pyproject.toml  requirements.txt  spot-instances.sh  upload-to-ssm.sh
stablediffusiongallery/: .env  .env.example  .gitignore  README.md  add_many_images.sh  install.py  install.sh  install_bacalhau.sh  install_nginx.sh  pyproject.toml  query_bacalhau_jobs.py  setenv.sh  test.rest  update_website.sh
stablediffusiongallery/scripts/: add_many_images.sh  add_many_images_test.sh  check_pid.sh  downloader.py  downloader_runner.py  image_creator_runner.py  install_bacalhau.sh  install_bacalhau_downloader.sh  install_bacalhau_image_creator.sh  install_nginx.sh  requirements.txt  restart_all_services.sh  set_env.sh  set_env.sh.template  setenv.sh  update_db.sh
stablediffusiongallery/tf/: .terraform.lock.hcl  output.tf  resources.tf  tf.plan  variable.tf
stablediffusiongallery/website/: app.py  db.py  gather.py
utility_containers/access-log-generator/: .gitignore  .latest-image-tag  .latest-registry-image  .latest-registry-image-latest  CLAUDE.md  Dockerfile  PLAN.md  README.md  access-log-generator.py  build.sh  docker-compose.yml  log_generator_config.yaml  log_schema_outputter.py  pyproject.toml  pytest.ini  requirements.txt  run-docker.sh  test_access_log_generator.py
utility_containers/sensor-log-generator/: .dockerignore  .gitignore  .latest-image-tag  .latest-registry-image  .latest-registry-image-latest  CLAUDE.md  DATABASE_TESTING.md  Dockerfile  LLM_DOCUMENTATION.md  PLAN.md  README.md  SOLUTION_EXPLANATION.md  TESTING_DISK_ERRORS.md  build.py  build.sh  collector.py  config.example.yaml  config.v1.example.yaml  debug_sqlite.sh  demo_retry_backoff.py  docker-compose-local.yml  docker-compose.debug.yml  docker-compose.stress.yml  docker-compose.yml  external_reader.py  llm_docs.txt  main.py  node_identity.json  pyproject.toml  query_all_log_files.sh  reader_example.py  requirements.txt  run_stress_test.sh  sensor_fixed.py  sensor_job.yaml  simple_reader_example.py  simulate_disk_errors.py  stress_test.py  stress_test_production.sh  test_container.sh  (+8 more)
(+2408 files in other folders)
