[tool.poetry]
name = "bacalhau-examples"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nbmake = "^1.3.4"
numpy = "^1.23.3"
pre-commit = "^2.20.0"
jupyter = "^1.0.0"
nbconvert = "^7.2.1"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
