[tool.poetry]
name = "bacalhau-examples"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nbmake = "^1.3"
numpy = "^1.23"
nbconvert = "^7.2"
pre-commit = "^2.20"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
