[project]
name = "bacalhau-scale-tester"
version = "0.1.0"
description = "A tool for testing the scalability of Bacalhau nodes on AWS spot instances"
authors = [{ name = "Bacalhau Project", email = "info@bacalhau.org" }]
dependencies = [
    "rich>=13.7.0",
    "boto3>=1.34.0",
    "click>=8.1.7",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
