[project]
name = "access-log-generator"
version = "0.1.0"
description = "A utility to generate access logs."
dependencies = [
    # Add your project's dependencies here, for example:
    # "requests>=2.20.0",
    # "numpy",
    "faker>=35.2.2",
    "iniconfig>=2.1.0",
    "packaging>=25.0",
    "pluggy>=1.5.0",
    "pytest>=8.3.5",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "six>=1.17.0",
    "typing-extensions>=4.13.2",
]

# Optional: Specify the Python versions your project supports
requires-python = ">=3.8"

# You might also have other sections like [tool.uv] or [build-system]
# For example:
# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"
