[project]
name = "sensor-log-generator"
version = "0.1.0"
description = "Generates realistic sensor data for testing and development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
    "pydantic>=2.0.0",
]
