[tool.poetry]
name = "duckdb-logs-processing"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@expanso.io>"]
readme = "README.md"
packages = [{include = "duckdb_logs_processing"}]

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.8.0"
requests = "^2.31.0"
google-cloud-storage = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
