[tool.poetry]
name = "duckdb-logs-processing"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@expanso.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
google-cloud-storage = "^2.9.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
duckdb = "0.8.1"
charset-normalizer = "3.0.1"
natsort = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
