[tool.poetry]
name = "motherduck-logs-processing"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@expanso.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.31.0"
google-cloud-storage = "^2.9.0"
numpy = "^1.24.3"
pandas = "^2.1.1"
duckdb = "^0.9.1"
charset-normalizer = "3.0.1"
natsort = "^8.3.1"
google-api-core = "^2.12.0"
google-cloud-core = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
