[tool.poetry]
name = "101_big_data_program"
version = "0.1.0"
description = ""
authors = ["Дубинчик Андрей <Andrei_Dubinchik@epam.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
pyarrow = "^6.0.1"
pandas = "^1.3.5"
fastavro = "^1.4.7"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
