[tool.poetry]
name = "node-files"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]
readme = "README.md"
packages = [{include = "node_files"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
faker = "^19.12.0"
pytz = "^2023.3.post1"
numpy = "^1.26.1"
ipython = "^8.16.1"
pyinstrument = "^4.6.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
