[tool.poetry]
name = "justicons-org"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^21.2.0"
flask = "^3.0.2"
ruff = "^0.2.2"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
