[tool.poetry]
name = "somanycars-org"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "21.2.0"
flask = "3.0.2"
ruff = "0.3.5"
jinja2 = "3.1.3"
flask-cors = "4.0.0"
uv = "0.1.27"
pyyaml = "6.0.1"
ultralytics = "^8.1.41"
supervision = "^0.19.0"
pyav = "^12.0.5"
uvicorn = "^0.29.0"
vidgear = { extras = ["asyncio"], version = "^0.3.2" }
starlette = "^0.37.2"
fastapi = "^0.110.1"
python-box = "^7.1.1"
pydantic-settings = "^2.2.1"
jsonpickle = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
