[tool.poetry]
name = "somanycars-org"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
supervision = "^0.19.0"
msgpack = "^1.0.8"
filelock = "^3.13.4"
requests = "^2.31.0"
uvicorn = "^0.29.0"
fastapi = "^0.110.1"
cffi = "^1.16.0"
ultralytics = "^8.1.47"
vidgear = "^0.3.2"
jsonpickle = "^3.0.4"
simplejpeg = "^1.7.2"
aiocache = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
