[project]
name = "log-generator"
version = "1.0.0"
description = "Log generator for Bacalhau examples"
requires-python = ">=3.11"
dependencies = ["faker==19.13.0", "python-dateutil==2.8.2", "six==1.16.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
