[tool.poetry]
name = "node-files"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]
readme = "README.md"
packages = [{include = "node_files"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
